arial unicode ms doesn't actually fix anything on ie 8 (at least not on my machine)

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -4,7 +4,7 @@
 
 html {
   height: 100%;
-  font-family: Roboto, Arial Unicode MS, Arial, sans-serif;
+  font-family: Roboto, Arial, sans-serif;
   font-size: 16px;
   font-weight: 400;
   background-color: $background;
